# rbar

./: Cargo.toml  config.json  modules.json  style.css
crates/battery/: Cargo.toml
crates/battery/src/: battery.rs  lib.rs  manager.rs
src/: bar.rs  config.rs  main.rs  rbar.rs  style.rs
src/modules/: battery.rs  clock.rs  mod.rs  power.rs
