[package]
name = "rbar"
version = "0.0.0"
edition = "2021"

[dependencies]
battery = "0.7"
chrono = "0.4"
dirs = "5.0.1"
gtk = { package = "gtk4", version = "0.8" }
gtk4-layer-shell = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
